<resources>
    <string name="app_name">金山云融合Demo</string>
    <string name="text_resolution">请选择合适的分辨率:</string>
    <string name="text_orientation">请选择显示方式:</string>
    <string name="text_frameRate">采集帧率:</string>
    <string name="text_videoBitrate">视频码率(Max):</string>
    <string name="text_audioBitrate">音频码率:</string>
    <string name="recommend">设置为推荐值</string>
    <string name="btn_start">直播</string>

    <string name="camera_error_title">相机异常</string>
    <string name="cannot_connect_camera">无法连接相机，请在系统设置里修改权限</string>
    <string name="camera_disabled">相机不可用</string>

    <string name="hello_world">Hello world!</string>
    <string name="click_to_shoot">开始直播</string>
    <string name="start_recording">开始录制</string>
    <string name="capture_thumbnail">截屏</string>
    <string name="beauty_switcher">美颜滤镜</string>
    <string name="watermark">水印</string>
    <string name="pitch">升降调</string>
    <string name="mute">静音</string>
    <string name="bgm">背景音乐</string>
    <string name="ear_mirror">耳返</string>
    <string name="pip">开始画中画</string>
    <string name="stop_pip">停止画中画</string>
    <string name="flash">Flash</string>
    <string name="picture_pip">开始图片画中画</string>
    <string name="stop_picture_pip">停止图片画中画</string>


    <string name="network">网络</string>
    <string name="history">历史</string>
    <string name="setting">设置</string>

    <string name="ksyun_name">金山云</string>

    <string name="ksyun_introduction_1">金山视频云依托业界领先的编解码技术与强大的分发服务，立足于金山云顶级的IaaS基础设施，提供一站式云直、点播服务。</string>
    <string name="ksyun_introduction_2">金山视频云提供内容生产及观看的工具，即推流播放SDK，凭借其完善的功能、卓越的兼容性及性能，满足客户不断涌现的业务需求，再通过金山魔方系统与第三方平台共同实现视频生态链的繁荣。</string>
    <string name="ksyun_introduction_3">金山云推流SDK支持H.264/H.265编码、软硬编，支持多种美颜滤镜特效、连麦，音频模块也在不断强化：美声、升降调、变声、混音等，弱网优化模块也颇有建树：码率自适应、网络主动探测、动态帧率等。</string>
    <string name="ksyun_introduction_4">金山云播放SDK通过首屏秒开、直播追赶等直播优化策略给直播提供一流的直播体验。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="net_search">查找视频信息</string>

    <string name="set_setting">设置</string>

    <string name="popup_choice">请选择编码格式</string>

    <string name="net_scan">扫一扫</string>

    <string name="set_st">播放格式:</string>
    <string name="set_surface">SurfaceView</string>
    <string name="set_texture">TextureView</string>
    <string name="set_hwc">解码格式:</string>
    <string name="set_hard">硬解</string>
    <string name="set_soft">软解</string>
    <string name="start_vedio">播放</string>

    <string name="debugoff">Debug关</string>
    <string name="debugon">Debug开</string>
    <string name="debugchange">Debubg开关</string>
    <string name="vrchange">VR开关</string>
    <string name="set_ksytexture">KSYTexture</string>
    <string name="set_ksyview">KSYVideoView</string>
    <string name="glrender_view">GLRednerView</string>
    <string name="audio_filter_selected">音频滤镜</string>
    <string name="audio_only">音频推流</string>
    <string name="front_mirror">前置镜像</string>

    <string name="live_type">播放:</string>
    <string name="type_vod">点播</string>
    <string name="type_live">直播</string>
    <string name="type_floating">悬浮窗播放</string>
    <string name="type_record">边播边录</string>
    <string name="bftime_text">BufferTime:</string>
    <string name="bfsize_text">BufferSize:</string>
    <string name="text_setting">设置</string>

    <string name="add_sticker">添加贴纸</string>
</resources>
