<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ksyun.live.demo.StreamActivity">

    <RelativeLayout
        android:id="@+id/main"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/rtmpurl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/edit_rtmpurl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:singleLine="true"
                android:text="rtmp://test.uplive.ks-cdn.com/live/androidtest"
                android:hint="请输入rtmp服务器的地址"/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/layout_audiorateinhz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rtmpurl">
            <TextView
                android:id="@+id/text_audiorateinhz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="请选择合适的音频采样率:"
                android:layout_centerVertical="true"/>
            <Spinner
                android:id="@+id/spinner_audiorateinhz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/text_audiorateinhz"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true">
            </Spinner>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_resolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_audiorateinhz">

            <TextView
                android:id="@+id/text_resolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/text_resolution"
                android:layout_centerVertical="true"/>
            <Spinner
                android:id="@+id/spinner_resolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/text_resolution"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true">
            </Spinner>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_orientation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/layout_resolution">
            <TextView
                android:id="@+id/text_orientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/text_orientation"/>
            <RadioGroup
                android:id="@+id/group_orientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_orientationbutton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="横屏" />

                <RadioButton
                    android:id="@+id/radio_orientationbutton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="竖屏" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_encode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/layout_orientation">
            <TextView
                android:id="@+id/text_encode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/text_orientation"/>
            <RadioGroup
                android:id="@+id/group_encode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_encode_hw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="硬编" />

                <RadioButton
                    android:id="@+id/radio_encode_sw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="软编" />
            </RadioGroup>

        </LinearLayout>



        <RelativeLayout
            android:id="@+id/layout_frameRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_encode">

            <TextView
                android:id="@+id/text_frameRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_frameRate"
                android:textSize="16sp"
                android:layout_centerVertical="true"/>

            <EditText
                android:id="@+id/edit_frameRatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/text_frameRate"
                android:layout_marginLeft="20dp"
                android:text="15"
                android:inputType="number"/>
            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="*默认为15"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/edit_frameRatePicker"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_videoBitrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_frameRate">

            <TextView
                android:id="@+id/text_videoBitrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_videoBitrate"
                android:textSize="16sp"
                android:layout_centerVertical="true"/>

            <EditText
                android:id="@+id/edit_videoBitratePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/text_videoBitrate"
                android:text="800"
                android:inputType="number"/>
            <Button
                android:id="@+id/btn_videoBitrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommend"
                android:layout_marginLeft="20dp"
                android:textSize="10sp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_audioBitrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_videoBitrate"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_audioBitrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_audioBitrate"
                android:textSize="16sp"
                android:layout_centerVertical="true"/>

            <EditText
                android:id="@+id/edit_audioBitratePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/text_audioBitrate"
                android:text="32"
                android:inputType="number"/>
            <Button
                android:id="@+id/btn_audioBitrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommend"
                android:textSize="10sp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="20dp"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_start"
            android:layout_below="@+id/layout_audioBitrate"/>

    </RelativeLayout>


</ScrollView>
